--- a/www_root/storyboard/css/login.css
+++ b/www_root/storyboard/css/login.css
@@ -1,10 +1,11 @@
 h1{
-    font-size: 2em;
-    margin-bottom: 15px;
+    border-width: 0 0 1px 0;
+    border-style: solid;
+    border-color: skyblue;
 }
 .login{
+    width: 50%;
     text-align: center;
-    padding: 5px;
 }
 .login>input{
     width: 70%;
@@ -14,3 +15,8 @@ h1{
 .login>input:nth-of-type(2){
     margin-bottom: 30px;
 }
+
+.button{
+    text-align: right;
+}
+
