--- a/www_root/storyboard/css/board.css
+++ b/www_root/storyboard/css/board.css
@@ -16,8 +16,7 @@ textarea{
     width:100%;
     padding: 10px;
     border: none;
-    background-color: #eee;
-
+    background-color: rgba(255,255,255,0);
 }
 .button{
     text-align: right;
@@ -49,9 +48,7 @@ textarea{
 .view>table td{
     text-align: left;
 }
-.contents textarea{
-    background-color: #fff;
-}
+
 h1{
     text-align: center;
 }
