--- a/www_root/storyboard/css/common.css
+++ b/www_root/storyboard/css/common.css
@@ -14,8 +14,28 @@
     box-sizing: border-box;
     font-size: 14px;
     color: #333;
-    background-color: #fff;
+
 }
+html{
+    height: 100%;
+    position: relative;
+    z-index: 1;
+}
+html:after{
+    background-image: url('../img/bg-skyblue.jpeg');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.5!important;
+    filter:alpha(opacity=50);
+    content:"";
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
 li {
     list-style:none;
 }
@@ -38,10 +58,11 @@ header{
     position: absolute;
     top: 0;
     width: 100%;
+    height: 100px;
 }
 #logo{
     float: left;
-    width: 20%;
+    padding-left: 10%;
     text-align: center;
     margin: 10px;
 }
@@ -51,12 +72,10 @@ header{
 }
 #nav-bar{
     float: right;
-    margin: 10px;
+    padding-top:50px;
+    padding-right:10%;
 }
-#nav-bar>ul{
-    position: relative;
-    bottom: 0;
-}
+
 #nav-bar>ul>li{
     line-height: 14px;
     padding:5px;
@@ -67,14 +86,13 @@ header{
     border-radius: 5px;
     margin: 5px;
 }
+
 .menu:hover{
     font-weight: bold;
 }
 /* content */
-#content-wrap{
-    width: 100%;
-    position: relative;
-    top: 80px;
+#wrap{
+    margin-top: 120px;
 }
 #content-wrap:after{
     content: "";
@@ -84,7 +102,8 @@ header{
 /* table */
 #table{
     width: 80%;        
-    margin: 10px auto;    
+    margin: 0px auto;    
+    
 }
 table{
     width: 100%;
@@ -104,12 +123,12 @@ th{
 td:nth-of-type(2){
     text-align: left;
 }
-tr:nth-of-type(2n-1)>td{
+/* tr:nth-of-type(2n-1)>td{
     background-color: #eee;
 }
 tr:nth-of-type(2n-1)>td *{
     background-color: #eee;
-}
+} */
 /* align center */
 .center{
     position: absolute;
@@ -144,19 +163,75 @@ tr:nth-of-type(2n-1)>td *{
 /* footer */
 footer{
     position: absolute;
-    bottom: 0;
+    bottom: 0; right: 0; left: 0;
     width: 100%;
-}
-footer>*{
-    background-color: #eee;
-}
-footer>div{
-    padding: 5px;
+    height: 80px;
     text-align: center;
+    line-height: 20px;
+    padding: 10px;
+    background-color: rgba(255,255,255,0);
 }
-#footernav{
-    color: #666;
+footer>span{
+    background-color: inherit;
 }
-#copyright{
-    color: #999;
+footer>span>b{
+    background-color: inherit;
+}
+@media screen and (max-width: 768px){
+    header{
+        height: 180px;   
+    }
+    #logo, #nav-bar{
+        float:none;
+        padding: 0px;
+        text-align: center;
+        margin: 20px 0;
+    }
+    #nav-bar>ul>li{
+        display: inline;
+        float: none;
+    }
+
+    #wrap{
+        margin-top: 180px;
+    }
+    #table{
+        width: 100%;   
+    }
+    th{
+        font-size: 1em;
+    }
+    footer{
+        height: 130px;
+    }
+    footer>span{
+        display: block;
+    }
+}
+@media screen and (max-width: 480px){
+    header{
+        height: 240px;
+    }
+    #wrap{
+        margin-top: 240px;
+    }
+    #logo>a{
+        font-size: 2.0em;
+        letter-spacing: 15px;
+    }
+    #nav-bar{
+        padding-top: 0px;
+    }
+    #nav-bar>ul>li{
+        display: block;
+        float: none;
+
+    }
+    .table-contents{
+        width: 20%;
+    }
+    footer{
+        overflow: scroll;
+    }
+    
 }
