--- a/www_root/storyboard/css/join.css
+++ b/www_root/storyboard/css/join.css
@@ -3,10 +3,20 @@ h1{
     border-style: solid;
     border-color: skyblue;
 }
-
 h2{
-    margin-bottom: 10px;
-    font-weight: bold;
+    font-size: 1.1em;
+    height: 40px;
+}
+span{
+    display: inline-block;
+    width: 30%;
+}
+span.notice{
+    display: inline-block;
+    width: 100%;
+    color: rgb(70,206,235);
+    font-size: 0.85em;
+    height: 40px;
 }
 .input{
     width: 70%;
@@ -14,17 +24,58 @@ h2{
 }
 .idpass{
     width: 50%;
+    height: 100px;
     float: left;
+
 }
 .private{
     width: 50%;
     float: left;
 }
-.input input[type="text"]{
+input[type="text"]{
     width: 70%;
     height: 40px;
-    margin:0 0 20px 0;
+    margin:20px 0 0 0;
+}
+input[type="password"]{
+    width: 70%;
+    height: 40px;
+    margin: 20px 0 0 0;
 }
 .button{
     text-align: right;
+}
+
+@media screen and (max-width: 768px){
+    span{
+        width:100%;
+        margin-top: 10px;
+    }
+    input[type="text"]{
+        width: 90%;
+        height: 40px;
+        margin: 0;
+    }
+    input[type="password"]{
+        width: 90%;
+        height: 40px;
+        margin: 0;
+    }
+    span.notice{
+        height: 70px;
+    }
+}
+
+@media screen and (max-width: 480px){
+    h2{
+        height: 20px;
+    }
+    .idpass, .private{
+        float:none;
+        width: 100%;
+        height: 300px;
+    }
+    span.notice{
+        height: 40px;
+    }
 }
