--- a/www_root/storyboard/css/common.css
+++ b/www_root/storyboard/css/common.css
@@ -14,7 +14,6 @@
     box-sizing: border-box;
     font-size: 14px;
     color: #333;
-
 }
 html{
     height: 100%;
@@ -35,7 +34,13 @@ html:after{
     height: 100%;
     z-index: -1;
 }
+input:focus{
+    outline: none;
+}
 
+textarea:focus{
+    outline: none;
+}
 li {
     list-style:none;
 }
