--- a/www_root/storyboard/css/join.css
+++ b/www_root/storyboard/css/join.css
@@ -36,6 +36,7 @@ input[type="text"]{
     width: 70%;
     height: 40px;
     margin:20px 0 0 0;
+    transition: background-color 0.1s;
 }
 input[type="password"]{
     width: 70%;
